--- a/anarisis_ver3/css/style.css
+++ b/anarisis_ver3/css/style.css
@@ -401,6 +401,7 @@ div#languageSwitch a:hover {
   text-align:center;
   position: fixed;
   top: 42px;
+  display: none;
 }
 .menu li {display: block;   padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
 .menu ul li a { text-decoration:none;  margin: 0px; color: #474747;; font-size: 20px;}
@@ -453,6 +454,23 @@ ul.navigationMenu li.active a {
   font-size: 20px;
   text-shadow: #fff 0px 0px; }
 
+ul.navigationMenu li.active1 a {
+  color:#3e4495;
+  text-decoration: underline;
+  text-decoration-color: #3e4495;
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: #fff 0px 0px; }
+
+/*ul.navigationMenu li.active_second a {
+  color:#3e4495;
+  text-decoration: underline;
+  text-decoration-color: #3e4495;
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: #fff 0px 0px; }*/
+
+  
 ul.navigationMenu li a:hover {
   color:#3e4495;
   text-decoration: underline;
@@ -765,58 +783,6 @@ text-decoration: none!important;
   float: right;
   background-color: #fff;
 }
-.hamburger{
-  display: none;
-  background:none;
-  position:fixed;
-  top:25px;
-  right:90px;
-  line-height:45px;
-  padding:0px 15px 0px 15px;
-  color:#394495;;
-  border:0;
-  font-size:1.4em;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
-}
-.cross{
-  background:none;
-  position:fixed;
-  top:0px;
-  right:0;
-  padding:0px 15px 0px 15px;
-  color:#394495;;
-  border:0;
-  font-size:3em;
-  line-height:65px;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
-}
-.menu{
-  z-index:1000000; 
-   width:100%; 
-  position:absolute; 
-  text-align:center;
-  position: fixed;
-  top: 42px;
-}
-.menu li {display: block;   padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
-.menu ul li a:hover {
-  font-size: 20px!important;
-  font-weight: normal!important;
-}
-.menu a{text-decoration:none; color:white;}
-
-.glyphicon-home{
-  color:white; 
-  font-size:1.5em; 
-  margin-top:5px; 
-  margin:0 auto;
-}
 .slideContainerHeadline.first {
   box-shadow: 0px 1px 18.69px 2.31px rgba(50, 50, 51, 0.29);
   background-color:  rgb(245,245,245);
@@ -824,15 +790,20 @@ text-decoration: none!important;
 }
 @media all and (max-width: 720px) {
   .hamburger {
-    display: block;
+    display: block!important;
   }
 }
 @media all and (max-width: 960px) {
   .navigationMenu_main {
-    display: none;
+    display: none!important;
   }
   .hamburger {
-    display: block;
+    display: block!important;
+  }
+}
+@media all and (min-width: 960px) {
+  .hamburger, .menu {
+    display: none!important;
   }
 }
 .main_logo {
@@ -1316,7 +1287,9 @@ text-align: left;
 .switch:hover::after { 
  content: attr(data-title); /* Выводим текст */
     position: absolute; /* Абсолютное позиционирование */
-    left: 20%; top: 40%; /* Положение подсказки */
+    width: 500%;
+    left: 100%;
+     top: 100%; /* Положение подсказки */
     z-index: 1; /* Отображаем подсказку поверх других элементов */
     background: rgba(255,255,230,0.6); /* Полупрозрачный цвет фона */
     font-family: Arial, sans-serif; /* Гарнитура шрифта */
