--- a/ukrainian_achive_company/css/style.css
+++ b/ukrainian_achive_company/css/style.css
@@ -640,11 +640,12 @@ text-align: left;
 }
 .video_container {
 	float: left;
-	width: 70%;
+	width: 80%;
 }
 .video {
 	background-color:  #ebe9e2;
 	height: 453px;
+	margin-left: 30px;
 }
 .download_file_item {
 	list-style: none;
@@ -661,4 +662,118 @@ font-weight: 400;
 line-height: 24px;
 text-align: center;
 padding-bottom: 14px;
+}
+.block_nine {
+	background-image: url(../img/block_nine.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height: 507px;
+	width: 100%;
+}
+.reviews_head {
+	font-family: 'Open Sans', sans-serif;
+color:  #d1cbb6;
+font-size: 30px;/* Приближение из-за подстановки шрифтов */
+font-weight: 400;
+line-height: 30px;/* Приближение из-за подстановки шрифтов */
+text-align: center;
+padding: 50px;
+}
+
+.client_icon {
+	background-image: url(../img/client_icon.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	margin: 20px auto;
+	width: 87px;
+	height: 87px;
+
+}
+.slider {
+  position: relative;
+  overflow: hidden;
+  margin: 20px auto 0 auto;
+  border-radius: 4px;
+}
+
+.slider ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 400px;
+  list-style: none;
+  padding-top: 30px;
+}
+
+.slider ul li {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  height: 400px;
+  width: 960px;
+  line-height: 34px;
+  background: transparent;
+  text-align: center;
+  font-family: Helvetica;
+color:  #ffffff;
+font-size: 20px;/* Приближение из-за подстановки шрифтов */
+font-weight: 400;
+text-align: center;
+transform: scaleX(1.0059);/* свойства ширины и высоты были исключены, поскольку было выполнено трансформирование */
+}
+
+a.control_prev, a.control_next {
+  position: absolute;
+  top: 40%;
+  z-index: 999;
+  display: block;
+  padding: 4% 3%;
+  width: auto;
+  height: auto;
+  background: #2a2a2a;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+a.control_prev:hover, a.control_next:hover {
+  opacity: 1;
+  -webkit-transition: all 0.2s ease;
+}
+
+a.control_prev {
+  border-radius: 0 2px 2px 0;
+}
+
+a.control_next {
+  right: 0;
+  border-radius: 2px 0 0 2px;
+}
+blockquote {
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote:after {
+  color: #ccc;
+  content: close-quote;;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-left: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
 }
