--- a/ukrainian_achive_company/css/style.css
+++ b/ukrainian_achive_company/css/style.css
@@ -29,9 +29,7 @@ img {
 	max-width: 960px;
 	margin: 0 auto;
 }
-header {
-	border-bottom: 1px solid #3359a6;
-}
+
 .logo {
 	padding-top: 12px;
 	padding-bottom: 10px;
@@ -183,11 +181,23 @@ border-color:  #5c636e;
 .slide {
 	position: relative;
 }
+.slide_text_container {
+	-webkit-transform: skew(-20deg);
+	   -moz-transform: skew(-20deg);
+	     -o-transform: skew(-20deg);
+	     transform: skew(-20deg);
+	     background-color: rgba(33,58,104, 0.5);
+	     position: absolute;
+	bottom: 8%;
+	height: 160px;
+	width: 50%;
+	right: -25px;
+}
 .slide_text {
 	position: absolute;
 	bottom: 10%;
 	width: 30%;
-	right: 20%;
+	right: 10%;
 	font-family: Arial;
 	color:  #ffffff;
 	font-size: 22px;
@@ -195,6 +205,7 @@ border-color:  #5c636e;
 	line-height: 33px;
 	text-align: right;
 }
+
 .sub_slider {
 	background-color: #3359a6;
 	text-align: center;
@@ -228,8 +239,8 @@ border-color:  #5c636e;
 }
 .main_container, .sub-carousel_container, .block_two {
 	width: 100%;
-    height: 447px;
-    display: table;
+    /*display: table;*/
+    padding-bottom: 100px;
     text-align: center;
     position: relative;
 }
@@ -249,9 +260,10 @@ border-color:  #5c636e;
 
 }
  .main_content_text {
-	display: table-cell;
-    vertical-align: middle;
+	/*display: table-cell;
+    vertical-align: middle;*/
     position: relative;
+    padding-top: 130px;
 }
 .main_content_item {
 	font-family: 'Open Sans', sans-serif;
@@ -448,6 +460,7 @@ text-align: center;
 /* footer*/
 footer {
 	background-color: #000621;
+	position: relative;
 }
 .footer_container {
 	padding-top: 20px;
@@ -776,4 +789,14 @@ blockquote:after {
 }
 blockquote p {
   display: inline;
+}
+.scrollup {
+    width: 77px;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+    display: none;
+    text-indent: -9999px;
+    background: url('../img/up.png') no-repeat;
 }
