--- a/ukrainian_achive_company/css/style.css
+++ b/ukrainian_achive_company/css/style.css
@@ -26,10 +26,12 @@ img {
 	max-width: 100%;
 }
 .wrapper {
-	max-width: 1260px;
+	max-width: 1366px;
 	margin: 0 auto;
 }
-
+.header_main.wrapper {
+	padding: 0 30px;
+} 
 .logo {
 	padding-top: 12px;
 	padding-bottom: 10px;
@@ -37,7 +39,7 @@ img {
 }
 .contacts_lang {
 	float: right;
-	padding-top: 30px;
+	padding-top: 20px;
 }
 .number {
 	font-family: Arial;
@@ -52,7 +54,7 @@ float: left;
 .number_icon {
 	background-color: #3359a6;
 	border-radius: 50%;
-	padding: 6px;
+	padding: 6px 7px;
 	float: left;
 	margin-right: 10px;
 }
@@ -200,14 +202,14 @@ border-color:  #5c636e;
 	right: 10%;
 	font-family: Arial;
 	color:  #ffffff;
-	font-size: 22px;
+	font-size: 1.375rem;
 	font-weight: 400;
 	line-height: 33px;
 	text-align: right;
 }
 
 .sub_slider {
-	background-color: #3359a6;
+	background-color: #cdcdcd;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	color:  #ffffff;
@@ -215,24 +217,20 @@ border-color:  #5c636e;
 	font-weight: 400;
 	text-align: center;
 	width: 100%;
-    height: 172px;
-    display: table;
+    padding: 20px 0;
     text-align: center;
 }
-.sub_slider > .sub_slider_item {
-	display: table-cell;
-    vertical-align: middle;
-    position: relative;
+.sub_slider_item {
+	display: none;
 }
-
-.main_content {
-	background-color: #f2f0e8;
+.fadeslider .slide:nth-child(1){
+    display:block;
 }
 .main_content_head {
 	font-family: 'Open Sans', sans-serif;
 	color:  #335aa7;
 	font-size: 30px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 33px;/* Приближение из-за подстановки шрифтов */
 	text-align: center;
 	padding-bottom: 35px;
@@ -251,58 +249,66 @@ border-color:  #5c636e;
 	height: 0;
 	border-style: solid;
 	border-width: 34px 33.5px 0 33.5px;
-	border-color: #3359a6 transparent transparent transparent;
+	border-color: #cdcdcd transparent transparent transparent;
     position: absolute;
     margin: auto
     top: 0;
     left: 50%;
     margin-left: -15px;*/
-
+}
+.wrapper.main_container {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.wrapper.block_two {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.wrapper.block_three {
+	max-width: 1200px;
+	margin: 0 auto;
 }
  .main_content_text {
-	/*display: table-cell;
-    vertical-align: middle;*/
     position: relative;
     padding-top: 130px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .main_content_item {
 	font-family: 'Open Sans', sans-serif;
 	color:  #5e5e5f;
 	font-size: 24px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 30px;/* Приближение из-за подстановки шрифтов */
 	text-align: center;
 }
 .carousel_container {
 	padding-top: 100px;
-	padding-bottom: 100px;
 }
 .block_one {
 	background-image: url(../img/banner.png);
 	background-color: #3359a6;
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	height: 456px;
 	width: 100%;
 }
 .block_one_container {
 	height: 456px;
 	width: 100%;
-    display: table;
+    
     text-align: center;
 }
 .block_one_text {
-	display: table-cell;
-    vertical-align: middle;
+	padding-top: 14%;
     font-family: 'Open Sans', sans-serif;
 	color:  #ffffff;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-size: 1.5rem;
+	font-weight: 300;
 	line-height: 38px;/* Приближение из-за подстановки шрифтов */
 	text-align: center;
 }
 .block_three {
-	background-color: #3359a6;
+	background-color: #eeeeeb;
 	width: 100%;
 	display: table;
     text-align: center;
@@ -313,40 +319,39 @@ border-color:  #5c636e;
     vertical-align: middle;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-	color:  #ffffff;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
-	line-height: 32px;/* Приближение из-за подстановки шрифтов */
-	text-align: center;
+font-size: 24px;/* Приближение из-за подстановки шрифтов */
+font-weight: 300;
+line-height: 32px;/* Приближение из-за подстановки шрифтов */
+text-align: center;
 }
 .block_three_btn {
 	width: 279px;
 	border-radius: 18px;
 	border-style: solid;
 	border-width: 3px;
-	border-color:  #ffffff;
+	border-color:  #3359a6;
 	box-sizing: border-box;
 	background-color:  rgba(44, 67, 102, 0);
 	margin: 0 auto;
 	margin-top: 20px;
+	padding: 5px 5px;
 }
 .block_three_btn:hover {
-	color: #3359a6;
-	background-color: #ffffff;
-	border-color:  #3359a6;
+	color: #eeeeeb;
+	background-color:#3359a6;
+	border-color:  #eeeeeb;
 	transition: all 0.3s ease 0s;
 }
 .block_three_btn_link:hover {
-	color: #3359a6;
+	color: #eeeeeb;
 }
 .block_three_btn_link {
-	text-align: center;
-	font-family: Arial;
-	color:  #ffffff;
-	font-size: 24px;
-	font-weight: 400;
-	line-height: 38px;
-	text-align: center;
+		font-family: Arial;
+color:  #335aa7;
+font-size: 24px;
+font-weight: 400;
+line-height: 38px;
+text-align: center;
 	text-decoration: none;
 	transition: all 0.3s ease 0s;
 }
@@ -367,7 +372,6 @@ border-color:  #5c636e;
 	display: table;
     text-align: center;
     height: 687px;
-    background-color: #e9e7e0;
 }
 .block_four_sub_item {
 	display: table-cell;
@@ -376,7 +380,7 @@ border-color:  #5c636e;
 	font-family: 'Open Sans', sans-serif;
 	color:  #5e5f5f;
 	font-size: 24.14px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 32px;/* Приближение из-за подстановки шрифтов */
 	text-indent: 24px;
 }
@@ -388,18 +392,21 @@ border-color:  #5c636e;
 	color: #3359a6;
 	font-weight: bold;
 }
+.skills {
+	background-color: #f0f0ed;;
+}
 .skills_container {
 	padding-top: 120px;
 	padding-bottom: 120px;
-	max-width: 980px;
+	max-width: 1080px;
 	margin: 0 auto;
 }
 .skills_item {
-	float: left;
-	width: 310px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 10px;
+    float: left;
+    width: 305px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 40px;
 }
 .skills_item_icon {
 	float: left;
@@ -423,7 +430,7 @@ border-color:  #5c636e;
 	font-family: 'Open Sans', sans-serif;
 	color:  #686c71;
 	font-size: 18px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 28px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
 	overflow:hidden;
@@ -431,31 +438,33 @@ border-color:  #5c636e;
 .clear {
 	clear: both;
 }
-.block_five {
-	background-color: #ebe9e2;
+.wrapper.block_five_container {
+	max-width: 888px;
+	margin: 0 auto;
 }
 .block_five_list_item {
 	list-style-image: url(../img/icon_list.png);
 	font-family: 'Open Sans', sans-serif;
-	color:  #696c71;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
-	text-align: left;
+color:  #696c71;
+font-size: 24px;/* Приближение из-за подстановки шрифтов */
+font-weight: 300;
+line-height: 24px;/* Приближение из-за подстановки шрифтов */
+text-align: left;
 	padding-bottom: 20px;
 	padding-top: 20px;
+	padding-left: 10px;
 }
 .block_five_container {
 	padding-top: 100px;
 	padding-bottom: 100px;
 }
-.main_content_head {
+.block_five_container .main_content_head {
 	font-family: 'Open Sans', sans-serif;
 color:  #335aa7;
 font-size: 30px;/* Приближение из-за подстановки шрифтов */
-font-weight: 700;
+font-weight: 400;
 line-height: 24px;/* Приближение из-за подстановки шрифтов */
-text-align: center;
+text-align: left;
 }
 /* footer*/
 footer {
@@ -468,8 +477,6 @@ footer {
 .col_one, .col_two, .col_three {
 	float: left;
 	margin: 25px;
-	margin-left: 75px;
-	margin-right: 75px;
 }
 .col_one {
 	width: 251px;
@@ -488,7 +495,7 @@ footer {
 	font-family: 'Open Sans', sans-serif;
 	color:  #ffffff;
 	font-size: 17.98px;/* Приближение из-за подстановки шрифтов */
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 24px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
 	transform: scaleY(1.001);/* свойства ширины и высоты были исключены, поскольку было выполнено трансформирование */
@@ -512,9 +519,6 @@ footer {
 	list-style: none;
 	float: left;
 	padding: 10px;
-}
-.soc_icon_link {
-	transition: all 0.3s ease;
 }
 .soc_icon_link:hover {
 	display: block;
@@ -609,6 +613,11 @@ transform: scale(1.1);
 .card_link {
 	display: block;
 }
+.wrapper.block_seven_container {
+	max-width: 960px;
+	margin: 0 auto;
+	padding-bottom: 50px;
+}
 .block_eight_container {
 	padding: 100px 0;
 }
@@ -628,7 +637,7 @@ transition: all .2s ease-in-out;
 }
 .block_seven_client, .block_seven_task , .block_seven_solution {
 	float: left;
-	padding: 20px 60px;
+	padding: 20px 50px;
 	width: 33%;
 }
 .block_seven_icon {
@@ -638,7 +647,7 @@ transition: all .2s ease-in-out;
 	font-family: 'Open Sans', sans-serif;
 color:  #005baa;
 font-size: 30px;/* Approximation due to font substitution */
-font-weight: 400;
+font-weight: 300;
 line-height: 24px;/* Approximation due to font substitution */
 text-align: center;
 text-transform: uppercase;
@@ -648,7 +657,7 @@ padding: 20px 0;
 	font-family: 'Open Sans', sans-serif;
 color:  #949699;
 font-size: 18px;/* Approximation due to font substitution */
-font-weight: 400;
+font-weight: 300;
 line-height: 20px;/* Approximation due to font substitution */
 text-align: left;
 }
@@ -656,6 +665,10 @@ text-align: left;
 	width: 70%;
 	height: 1px;
 	background-color: #e9e7e0;
+	margin: 0 auto;
+}
+.wrapper.block_six_container {
+	max-width: 960px;
 	margin: 0 auto;
 }
 .block_six_container {
@@ -673,7 +686,7 @@ text-align: left;
 	width: 80%;
 }
 .video {
-	background-color:  #ebe9e2;
+	background-color:  #cfcfcf;
 	height: 453px;
 	margin-left: 30px;
 }
@@ -699,6 +712,7 @@ padding-bottom: 14px;
 	background-repeat: no-repeat;
 	height: 507px;
 	width: 100%;
+	overflow: hidden;
 }
 .reviews_head {
 	font-family: 'Open Sans', sans-serif;
@@ -754,35 +768,31 @@ text-align: center;
 transform: scaleX(1.0059);/* свойства ширины и высоты были исключены, поскольку было выполнено трансформирование */
 }
 
-a.control_prev, a.control_next {
-  position: absolute;
-  top: 40%;
-  z-index: 999;
-  display: block;
-  padding: 4% 3%;
-  width: auto;
-  height: auto;
-  background: #2a2a2a;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 18px;
-  opacity: 0.8;
+.control_prev, .control_next {
   cursor: pointer;
+	display: inline-block;
+	background: #fff;
+border-style: solid;
+border-width: 1px;
+border-color:  #5c636e;
+	text-indent: -99999px;
+	height: 12px;
+	width: 12px;
+	margin: 0 6px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+
 }
 
-a.control_prev:hover, a.control_next:hover {
+.control_prev:hover, .control_next:hover {
   opacity: 1;
   -webkit-transition: all 0.2s ease;
 }
 
-a.control_prev {
-  border-radius: 0 2px 2px 0;
-}
 
-a.control_next {
+.control_next {
   right: 0;
-  border-radius: 2px 0 0 2px;
 }
 blockquote {
   padding: 0.5em 10px;
@@ -812,11 +822,14 @@ blockquote p {
     height: 80px;
     position: absolute;
     bottom: 0;
-    right: 100px;
+    right: 50px;
     display: none;
     text-indent: -9999px;
     background: url('../img/up.png') no-repeat;
 }
+/*.scrollup:hover {
+	background: url('../img/up_hover.png') no-repeat;
+}*/
 .carousel_dot {
 	width: 5px;
 	height: 5px;
@@ -977,17 +990,118 @@ blockquote p {
 
 
 
-
-
-
-
-
-
-
-
-
 @media (max-width: 1200px) {
 	.bx-controls-direction {
 		display: none;
 	}
 }
+
+/*slider_text_bottom*/
+.slider_text_bottom {
+ z-index: 9;
+ width: 960px;
+ overflow: hidden;
+margin: 0 auto;
+ position: relative;
+ }
+ .slider_text_bottom ul,
+ .slider_text_bottom li {
+ padding: 0;
+ margin: 0;
+ list-style-type: none;
+ font-family: Helvetica;
+color:  #ffffff;
+font-size: 20px;/* Приближение из-за подстановки шрифтов */
+font-weight: 400;
+line-height: 33px;/* Приближение из-за подстановки шрифтов */
+text-align: center;
+transform: scaleX(1.0059);/* свойства ширины и высоты были исключены, поскольку было выполнено трансформирование */
+ }
+ .slider_text_bottom ul {
+ width: 9999px; 
+ }
+ .slider_text_bottom ul li {
+ list-style-type: none;
+ float: left;
+ width: 980px;
+ }
+ .slider_text_bottom .nav {
+    width: 9%;
+    margin: 0 auto;
+    padding-bottom: 40px;
+ }
+ .slider_text_bottom .nav span {
+border-radius: 50%;
+border-style: solid;
+border-width: 1px;
+border-color:  #5c636e;
+box-sizing: border-box;
+background-color:  #ffffff;
+width: 16px;
+height: 16px;
+ float: left;
+ box-shadow: 0 1px 2px #000;
+ margin-left: 5px;
+ margin-top: 20px;
+ }
+ .slider_text_bottom .nav span.on {
+ background: #fff;
+	background: -webkit-linear-gradient(90deg, #6c788a 0%, #ffffff 100%);
+	background: -moz-linear-gradient(90deg, #6c788a 0%, #ffffff 100%);
+	background: -o-linear-gradient(90deg, #6c788a 0%, #ffffff 100%);
+	background: -ms-linear-gradient(90deg, #6c788a 0%, #ffffff 100%);
+ }
+
+ .copyright {
+ 	
+ 	padding-bottom: 30px;
+ 	font-family: 'Open Sans', sans-serif;
+ 	float: left;
+color:  #9e9e9e;
+font-size: 12px;/* Приближение из-за подстановки шрифтов */
+font-weight: 400;
+line-height: 20px;/* Приближение из-за подстановки шрифтов */
+text-align: left;
+ }
+ .copyright a {
+ 	color: #005baa;
+ 	text-decoration: none;
+ }
+ .wrapper.footer_container {
+ 	max-width: 960px;
+ 	margin: 0 auto;
+ }
+
+
+/*main_slider*/
+ @media (max-width: 960px) {
+ 	#slider.container, .block_one {
+ 		height: 425px;
+ 	}
+ 	.slider-wrapper {
+ 		height: 425px;
+ 	}
+ 	.slide_text {
+ 		font-size: 16px;
+ 	}
+ }
+ @media (max-width: 720px) {
+ 	#slider.container, .block_one {
+ 		height: 325px;
+ 	}
+ 	.slider-wrapper {
+ 		height: 325px;
+ 	}
+ 	.block_four_sub {
+ 		float: none;
+ 		width: 100%;
+ 	}
+ }
+ @media (max-width: 520px) {
+ 	#slider.container, .block_one {
+ 		height: 225px;
+ 	}
+ 	.slider-wrapper {
+ 		height: 225px;
+ 	}
+ }
