--- a/Domiki/css/style.css
+++ b/Domiki/css/style.css
@@ -961,6 +961,14 @@ textarea:-moz-placeholder {
     border-radius: 10px;
     margin: 0 auto;
 }
+.submit_container:hover {
+    background: -webkit-linear-gradient(90deg, #8baa3c 0%, #d0e55e 60%);
+    background: -moz-linear-gradient(90deg, #8baa3c 0%, #d0e55e 60%);
+    background: -o-linear-gradient(90deg, #8baa3c 0%, #d0e55e 60%);
+    background: -ms-linear-gradient(90deg, #8baa3c 0%, #d0e55e 60%);
+    background: linear-gradient(0deg, #8baa3c 0%, #d0e55e 60%);
+    transition: all ease .3s;
+}
 .form_input_message {
     margin-bottom: 2px;
 }
