--- a/Domiki/css/style.css
+++ b/Domiki/css/style.css
@@ -110,9 +110,16 @@ body {
 .nav:hover {
     background-color:  #fe5f53;
 }
-.nav:focus {
+.active_bg {
     background-color:  #fe5f53;
 }
+li.nav:focus {
+    background-color:  #fe5f53;
+}
+li.nav:active {
+    background-color:  #fe5f53;
+}
+
 .nav_a {
     color: #fff;
     text-transform: uppercase;
@@ -993,5 +1000,5 @@ textarea:-moz-placeholder {
     width: 100%;
 }
 .lift_up:hover {
-    transform: scale(1.1);
+    transform: scale(1.5);
 }
