--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -446,7 +446,7 @@ text-align: center;
 	font-weight: 300;
 	line-height: 28px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
-	overflow:hidden;
+	/*overflow:hidden;*/
 }
 .clear {
 	clear: both;
