--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -660,7 +660,9 @@ box-shadow: 4px 5px 5px 0px rgba(0,91,170,1);
 	transition: all .2s ease-in-out;
 	z-index: 9999;
 }
-
+.card_item img {
+	display: block;
+}
 .card_item:hover {
 transform: scale(1.1);
 }
@@ -750,19 +752,20 @@ text-align: left;
 	width: 80%;
 }
 .video {
-	background-color:  #cfcfcf;
-	height: 100%;
-    min-height: 420px;
-	margin-left: 30px;
-	position: relative;
-	height: 0;
+	 float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
 }
-.video iframe {
+.video iframe, .video object, .video embed {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .download_file_item {
 	list-style: none;
@@ -1104,6 +1107,7 @@ text-align: left;
  	
 	.card_container {
     max-width: 450px;
+    padding-left: 8px;
 }
 
  .languages {
@@ -1114,7 +1118,16 @@ text-align: left;
 .languages_count {
 	padding-left: 5px;
 }
-
+.card_item {
+	padding-left: 0;
+    padding-bottom: 0;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 0;
+}
+.card_item img {
+	width: 90%;
+}
 
 /* .slider_text_bottom ul li:first-child {
  	display: block;
