--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -296,7 +296,7 @@ border-color:  #5c636e;
 .block_one {
 	background-image: url(../img/banner.png);
 	background-color: #3359a6;
-	background-size: 100% 100%;
+	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
 }
@@ -1003,7 +1003,12 @@ text-align: left;
  	max-width: 1366px;
  	margin: 0 auto;
  }
-
+.banner_static {
+	display: none;
+}
+.banner_static img {
+	display: block;
+}
 
 /*madia_query*/
 @media (max-width: 1100px) {
@@ -1014,7 +1019,12 @@ text-align: left;
  @media all and (max-width: 960px) {
  	#slider.container, .block_one {
  		height: 425px;
-
+ 	}
+ 	#slider {
+ 		display: none;
+ 	}
+ 	.banner_static {
+ 		display: block;
  	}
  	.slider-wrapper {
  		height: 425px;
@@ -1052,9 +1062,9 @@ text-align: left;
  	#slider.container, .block_one {
  		height: 225px;
  	}
- 	.slider-wrapper {
+ 	/*.slider-wrapper {
  		height: 225px;
- 	}
+ 	}*/
  	.block_four_sub {
  		float: none;
  		width: 100%;
@@ -1098,9 +1108,9 @@ text-align: left;
  	#slider.container, .block_one {
  		height: 225px;
  	}
- 	.slider-wrapper {
+ 	/*.slider-wrapper {
  		height: 225px;
- 	}
+ 	}*/
  	.contacts_lang {
  		float: left;
  	}
@@ -1127,14 +1137,6 @@ text-align: left;
     width: 45%;
 }
 
-
-/* .slider_text_bottom ul li:first-child {
- 	display: block;
- 	width: 6%!important;
- 	padding-bottom: 40px;
- 	padding-left: 5px;
- 	padding-right: 5px;
- }*/
  blockquote {
  	padding: 0;
  }
@@ -1166,6 +1168,7 @@ text-align: left;
 .languages {
 	padding-left: 0;
 }
+
 }
 
 
