--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -128,7 +128,16 @@ text-align: left;
 	background: #FFF;
 	overflow: hidden;
 }
-
+.first_slide {
+	background-image: url(../img/Банер3.0.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.second_slide {
+	background-image: url(../img/Банер2.0.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
 .slider-wrapper li {
 	display: none;
 	height: inherit;
