--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -124,22 +124,22 @@ text-align: left;
 	z-index: 500;
 	position: relative;
 	width: 100%;
-	height: 525px;;
+	/*height: 525px;*/
 	background: #FFF;
 	overflow: hidden;
 }
-.first_slide {
+/*.first_slide {
 	background-image: url(../img/Банер3.0.jpg);
-	background-size: cover;
+	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 .second_slide {
 	background-image: url(../img/Банер2.0.jpg);
-	background-size: cover;
+	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
-}
+}*/
 .slider-wrapper li {
 	display: none;
 	height: inherit;
@@ -150,7 +150,7 @@ text-align: left;
 }
 
 .slider-wrapper img {
-	position: absolute;
+	/*position: absolute;*/
 	display: block;
 	max-width: 100%;
 	width: 100%;
