--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -124,22 +124,11 @@ text-align: left;
 	z-index: 500;
 	position: relative;
 	width: 100%;
-	/*height: 525px;*/
+	height: 525px;;
 	background: #FFF;
 	overflow: hidden;
 }
-/*.first_slide {
-	background-image: url(../img/Банер3.0.jpg);
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-.second_slide {
-	background-image: url(../img/Банер2.0.jpg);
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-}*/
+
 .slider-wrapper li {
 	display: none;
 	height: inherit;
@@ -150,7 +139,7 @@ text-align: left;
 }
 
 .slider-wrapper img {
-	/*position: absolute;*/
+	position: absolute;
 	display: block;
 	max-width: 100%;
 	width: 100%;
@@ -307,7 +296,7 @@ border-color:  #5c636e;
 .block_one {
 	background-image: url(../img/banner.png);
 	background-color: #3359a6;
-	background-size: cover;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	width: 100%;
 }
@@ -1014,12 +1003,7 @@ text-align: left;
  	max-width: 1366px;
  	margin: 0 auto;
  }
-.banner_static {
-	display: none;
-}
-.banner_static img {
-	display: block;
-}
+
 
 /*madia_query*/
 @media (max-width: 1100px) {
@@ -1027,19 +1011,11 @@ text-align: left;
 	font-size: 16px;
 }
 }
-@media (max-width: 960px) {
-	#slider {
- 		display: none;
- 	}
- 	.banner_static {
- 		display: block;
- 	}
-}
  @media all and (max-width: 960px) {
  	#slider.container, .block_one {
  		height: 425px;
+
  	}
- 	
  	.slider-wrapper {
  		height: 425px;
  	}
@@ -1076,9 +1052,9 @@ text-align: left;
  	#slider.container, .block_one {
  		height: 225px;
  	}
- 	/*.slider-wrapper {
+ 	.slider-wrapper {
  		height: 225px;
- 	}*/
+ 	}
  	.block_four_sub {
  		float: none;
  		width: 100%;
@@ -1102,7 +1078,7 @@ text-align: left;
 	margin: 0 auto;
 }
 .sub_slider {
-	font-size: 14px;
+	font-size: 24px;
 }
 .wrapper.block_six_container {
 	padding-left: 30px;
@@ -1122,9 +1098,9 @@ text-align: left;
  	#slider.container, .block_one {
  		height: 225px;
  	}
- 	/*.slider-wrapper {
+ 	.slider-wrapper {
  		height: 225px;
- 	}*/
+ 	}
  	.contacts_lang {
  		float: left;
  	}
@@ -1148,9 +1124,18 @@ text-align: left;
     padding-bottom: 5px;
     padding-top: 5px;
     padding-right: 0;
-    width: 45%;
+}
+.card_item img {
+	width: 90%;
 }
 
+/* .slider_text_bottom ul li:first-child {
+ 	display: block;
+ 	width: 6%!important;
+ 	padding-bottom: 40px;
+ 	padding-left: 5px;
+ 	padding-right: 5px;
+ }*/
  blockquote {
  	padding: 0;
  }
@@ -1182,7 +1167,6 @@ text-align: left;
 .languages {
 	padding-left: 0;
 }
-
 }
 
 
