--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -304,7 +304,6 @@ border-color:  #5c636e;
 	padding-left: 90px
 }
 .block_one {
-	background-image: url(../img/banner.png);
 	background-color: #3359a6;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -467,7 +466,6 @@ text-align: center;
 	clear: both;
 }
 .block_five {
-	background-image: url(../img/bg_what_you_get.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 
@@ -1131,6 +1129,9 @@ text-align: left;
     max-width: 450px;
     padding-left: 8px;
 }
+.number_icon {
+	display: none;
+}
 
  .languages {
 	float: left;
@@ -1159,7 +1160,7 @@ text-align: left;
     padding: 0 10px;
 }
 .logo {
-	width: 20%;
+	width: 25%;
 }
 .contacts_lang {
 	float: right;
@@ -1170,6 +1171,7 @@ text-align: left;
 }
 .number {
 	font-size: 18px;
+	padding-right: 5px;
 }
 .lang_item_link {
 	padding: 0 2px 0 2px;
